--- a/gitcodex/pom.xml
+++ b/gitcodex/pom.xml
@@ -26,6 +26,11 @@
 
 	<dependencies>
 		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+    		<artifactId>transport</artifactId>
+    		<version>6.4.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
