--- a/gitcodex/pom.xml
+++ b/gitcodex/pom.xml
@@ -25,6 +25,10 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+  <groupId>org.apache.commons</groupId>
+  <artifactId>commons-lang3</artifactId>
+</dependency>
 		<dependency>
 		    <groupId>org.elasticsearch.client</groupId>
     		<artifactId>transport</artifactId>
