Update result html and css

--- a/gitcodex/src/main/resources/application.properties
+++ b/gitcodex/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 app.version=0.0.1-SNAPSHOT
+
+# MVC settings
+
+spring.thymeleaf.cache=true
+spring.thymeleaf.enabled=true
+spring.mvc.view.prefix = classpath:/templates/
+spring.mvc.suffix = .html
